[build-system]
requires = [
    "setuptools >= 68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pulp-helmchart-client"
version = "0.2.0.dev0"
description = "Python client for the pulp-helmchart plugin"
readme = "README.md"
authors = [
  {name = "Pulp Helm Chart Contributors"},
]
license = {text = "GPL-2.0-or-later"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
  "pulpcore-client>=3.103.4,<3.116",
  "pydantic>=2,<3",
  "urllib3>=1.25.3",
]

[tool.setuptools]
packages = ["pulpcore.client.pulp_helmchart"]

[tool.setuptools.package-data]
"pulpcore.client.pulp_helmchart" = ["py.typed"]
